feito-o-layout-com-as-opcoes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,180 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
     <title>projeto3-driveneats</title>
   </head>
-  <body></body>
+  <body>
+    <div class="big-container">
+      <div class="nav-bar">
+        <div class="nav-titles">
+          <h1 class="righteous title">DrivenEats</h1>
+          <h2 class="subtitle">Sua comida em 6 minutos</h2>
+        </div>
+      </div>
+      <div class="site-container">
+        <div class="menu">
+          <p class="righteous choice-title">Primeiro, seu prato</p>
+          <div class="cards">
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="menu">
+          <p class="righteous choice-title">Agora, sua bebida</p>
+          <div class="cards">
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="menu">
+          <p class="righteous choice-title">Por fim, sua sobremesa</p>
+          <div class="cards">
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+            <div class="menu-options">
+              <div class="menu-descrip">
+                <img
+                  src="./img/frango_yin_yang 1.png"
+                  alt=""
+                  class="food-pictures"
+                />
+                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-descrip">
+                  Um pouco de batata, um pouco de salada
+                </p>
+                <p class="food-price">R$ 14,90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="nav-folder"></div>
+    </div>
+  </body>
 </html>
