início-da-adição-das-imagens

--- a/index.html
+++ b/index.html
@@ -37,19 +37,21 @@
                 <p class="food-descrip">
                   Um pouco de batata, um pouco de salada
                 </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-price">R$ 12,50</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/figado-pure.jpg"
+                  alt="figado"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <p class="food-name">
+                  <strong>Fígado com purê de batata</strong>
+                </p>
                 <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
+                  Delicioso bife de fígado, com o purê do chef
                 </p>
                 <p class="food-price">R$ 14,90</p>
               </div>
@@ -90,15 +92,13 @@
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/coquinha_gelada 1.png"
+                  alt="coquinha"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-name"><strong>Coquinha gelada</strong></p>
+                <p class="food-descrip">Lata 350ml</p>
+                <p class="food-price">R$ 3,50</p>
               </div>
             </div>
             <div class="menu-options">
@@ -137,21 +137,19 @@
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/pudim 1.png"
+                  alt="pudinzinho"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
+                <p class="food-name"><strong>Pudim</strong></p>
+                <p class="food-descrip">Apenas pudim</p>
                 <p class="food-price">R$ 14,90</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
+                  src="./img/coquinha_gelada 1.png"
                   alt=""
                   class="food-pictures"
                 />
