html-e-css-finalizados

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
     <title>projeto3-driveneats</title>
   </head>
   <body>
@@ -23,7 +29,7 @@
         </div>
       </div>
       <div class="site-container">
-        <div class="menu">
+        <div class="menu first-cards">
           <p class="righteous choice-title">Primeiro, seu prato</p>
           <div class="cards">
             <div class="menu-options">
@@ -37,7 +43,7 @@
                 <p class="food-descrip">
                   Um pouco de batata, um pouco de salada
                 </p>
-                <p class="food-price">R$ 12,50</p>
+                <p class="food-price">R$ 16,90</p>
               </div>
             </div>
             <div class="menu-options">
@@ -53,40 +59,36 @@
                 <p class="food-descrip">
                   Delicioso bife de fígado, com o purê do chef
                 </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-price">R$ 20,90</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/bisteca.jpg"
+                  alt="bisteca"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
+                <p class="food-name">
+                  <strong>Bisteca suína com limão</strong>
                 </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-descrip">Bisteca suína com limão</p>
+                <p class="food-price">R$ 22,90</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
-                <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
-                  class="food-pictures"
-                />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
+                <img src="./img/misto.jpg" alt="misto" class="food-pictures" />
+                <p class="food-name"><strong>Misto de carnes</strong></p>
                 <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
+                  Carne, linguiça, frango e molho de churrasco
                 </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-price">R$ 29,90</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="menu">
+        <div class="menu second-cards">
           <p class="righteous choice-title">Agora, sua bebida</p>
           <div class="cards">
             <div class="menu-options">
@@ -103,35 +105,27 @@
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
-                <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
-                  class="food-pictures"
-                />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
-                <p class="food-price">R$ 14,90</p>
+                <img src="./img/Pepsi.png" alt="pepsi" class="food-pictures" />
+                <p class="food-name"><strong>Bébis geladinha</strong></p>
+                <p class="food-descrip">Melhor que coquinha</p>
+                <p class="food-price">R$ 4,50</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/GUARAVITA.jpg"
+                  alt="guaravita"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-name"><strong>Guaravita</strong></p>
+                <p class="food-descrip">Tipo guaracamp, só que menos gostoso</p>
+                <p class="food-price">R$ 2,90</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="menu">
+        <div class="menu third-cards">
           <p class="righteous choice-title">Por fim, sua sobremesa</p>
           <div class="cards">
             <div class="menu-options">
@@ -143,41 +137,47 @@
                 />
                 <p class="food-name"><strong>Pudim</strong></p>
                 <p class="food-descrip">Apenas pudim</p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-price">R$ 4,90</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/coquinha_gelada 1.png"
-                  alt=""
+                  src="./img/mousse.jpg"
+                  alt="mousse"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-name"><strong>mousse</strong></p>
+                <p class="food-descrip">Mousse de chocolate amargo</p>
+                <p class="food-price">R$ 6,90</p>
               </div>
             </div>
             <div class="menu-options">
               <div class="menu-descrip">
                 <img
-                  src="./img/frango_yin_yang 1.png"
-                  alt=""
+                  src="./img/banana.jpg"
+                  alt="doce-de-banana"
                   class="food-pictures"
                 />
-                <p class="food-name"><strong>Frango teriyaki</strong></p>
-                <p class="food-descrip">
-                  Um pouco de batata, um pouco de salada
-                </p>
-                <p class="food-price">R$ 14,90</p>
+                <p class="food-name"><strong>Doce de banana</strong></p>
+                <p class="food-descrip">Não tão gostoso quanto o mousse</p>
+                <p class="food-price">R$ 8,90</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="nav-folder"></div>
+      <div class="nav-folder">
+        <div class="button">
+          <button onclick="button()">
+            <p class="button-text">
+              Selecione os 3 itens <br />
+              para fechar o pedido
+            </p>
+          </button>
+        </div>
+      </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
